--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <title>London Perinatal Health Data</title>
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta name="theme-color" content="#000000" />
+
+    <meta name="keywords" content="perinatal, London, United Kingdom, public health, maternal health, infant, pregnancy, birth, childbirth, labour, labor, delivery, prenatal, antenatal, postpartum, Fingertips, Department of Health and Social Care, Public Health Profiles, teenage mothers, stillbirth, ectopic, Caesarean, c-section, fertility, ethnic minority groups, baby, babies, care, breastmilk ">
+
+    <meta name="author" content="Dakota Bragato">
+    
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Compare perinatal health indicator data across London boroughs"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- UIkit CSS -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.23.6/dist/css/uikit.min.css" />  -->
+
+    <!-- UIkit JS -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.23.6/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.23.6/dist/js/uikit-icons.min.js"></script>  -->
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>React App</title>
   </head>
   <body>
