--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,6 +63,7 @@
 
     <script src="%PUBLIC_URL%/bootstrap-assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="%PUBLIC_URL%/bootstrap-assets/js/off-canvas.js"></script>
-    <script src="%PUBLIC_URL%/bootstrap-assets/js/misc.js"></script>
+    <!-- TEMPORARILY remove this -->
+    <!-- <script src="%PUBLIC_URL%/bootstrap-assets/js/misc.js"></script> -->
   </body>
 </html>
