--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,7 +63,6 @@
 
     <script src="%PUBLIC_URL%/bootstrap-assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="%PUBLIC_URL%/bootstrap-assets/js/off-canvas.js"></script>
-    <!-- TEMPORARILY remove this -->
-    <!-- <script src="%PUBLIC_URL%/bootstrap-assets/js/misc.js"></script> -->
+    <script src="%PUBLIC_URL%/bootstrap-assets/js/misc.js"></script>
   </body>
 </html>
