--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="%PUBLIC_URL%/bootstrap-assets/css/style.css" rel="stylesheet" />
 
+    <link href="%PUBLIC_URL%/bootstrap-assets/css/style.css" rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
