--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,20 +20,11 @@
       content="Compare perinatal health indicator data across London boroughs"
     />
 
-    <!-- CSS -->
-      <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-HgfP1sPbHRtIOKn3EXAMPLEHASH"
-      crossorigin="anonymous"
-      />
+      <!-- Bootstrap CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- JS -->
-      <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MI6SLpGTTgEXAMPLEHASH"
-      crossorigin="anonymous"
-      ></script>
+      <!-- Bootstrap JS -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
